--- a/other/datasheet/references.bib
+++ b/other/datasheet/references.bib
@@ -1,5 +1,4 @@
 
-
 @Manual{citeR,
     title = {{R: A Language and Environment for Statistical Computing}},
     author = {{R Core Team}},
@@ -9,57 +8,46 @@
     url = {https://www.R-project.org/},
   }
   
-  
-@Article{tidyverse,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
 
-@Book{ggplot2,
-    author = {Hadley Wickham},
-    title = {ggplot2: Elegant Graphics for Data Analysis},
-    publisher = {Springer-Verlag New York},
-    year = {2016},
-    isbn = {978-3-319-24277-4},
-    url = {https://ggplot2.tidyverse.org},
-  }
-  
+@article{gebru2021datasheets,
+  title={Datasheets for datasets},
+  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
+  journal={Communications of the ACM},
+  volume={64},
+  number={12},
+  pages={86--92},
+  year={2021},
+  publisher={ACM New York, NY, USA}
+}
 
-@Manual{knitr,
-    title = {knitr: A General-Purpose Package for Dynamic Report Generation in R},
-    author = {Yihui Xie},
-    year = {2024},
-    note = {R package version 1.48},
-    url = {https://yihui.org/knitr/},
-  }
+@Manual{citeRohan,
+  title={Telling Stories with Data},
+  author = {Rohan Alexander},
+  organization={"University of Toronto"},
+  year={2023},
+  url={https://www.tellingstorieswithdata.com},
+}
 
-@Manual{arrow,
-    title = {arrow: Integration to 'Apache' 'Arrow'},
-    author = {Neal Richardson and Ian Cook and Nic Crane and Dewey Dunnington and Romain François and Jonathan Keane and Dragoș Moldovan-Grünfeld and Jeroen Ooms and Jacob Wujciak-Jens and {Apache Arrow}},
-    year = {2024},
-    note = {R package version 17.0.0.1},
-    url = {https://CRAN.R-project.org/package=arrow},
-  }
-  
-@Manual{here,
-    title = {here: A Simpler Way to Find Your Files},
-    author = {Kirill Müller},
-    year = {2020},
-    note = {R package version 1.0.1},
-    url = {https://CRAN.R-project.org/package=here},
-  }
-  
-@Manual{scales,
-    title = {scales: Scale Functions for Visualization},
-    author = {Hadley Wickham and Thomas Lin Pedersen and Dana Seidel},
-    year = {2023},
-    note = {R package version 1.3.0},
-    url = {https://CRAN.R-project.org/package=scales},
-  }
+@misc{ibdb_statistics,
+  author       = {Internet Broadway Database},
+  title        = {Statistics},
+  year         = {2024},
+  url          = {https://www.ibdb.com/statistics/},
+  note         = {Accessed: 2024-12-02}
+}
+
+@misc{cookson_broadway,
+  author       = {Cookson, Tim},
+  title        = {Broadway Grosses Dataset},
+  year         = {2020},
+  url          = {https://github.com/tacookson/data/tree/master/broadway-grosses},
+  note         = {Accessed: 2024-12-02}
+}
+
+@misc{playbill_grosses,
+  author       = {Playbill},
+  title        = {Grosses List},
+  year         = {2024},
+  url          = {https://playbill.com/grosses},
+  note         = {Accessed: December 2, 2024}
+}
